# neuink

./: .env.example  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  README_EN.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: build-portable.cjs
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.bundle-only.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/logo_assets/: README.txt  asset_manifest.json
apps/desktop/src-tauri/resources/embedding-models/default/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: App.tsx  AppTabsBar.tsx  WorkspaceTabsBar.test.tsx  WorkspaceTabsBar.tsx  activityBarState.test.ts  activityBarState.ts  appSupport.tsx  editorLayout.ts  workspaceSplit.ts  workspaceSurface.test.ts  workspaceSurface.ts
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  input-group.tsx  input.tsx  popover.tsx  select.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx
apps/desktop/src/modules/annotations/: annotationRegistry.ts
apps/desktop/src/modules/annotations/components/: AnnotationLibraryView.tsx  SegmentAnnotationEditor.tsx
apps/desktop/src/modules/annotations/config/: annotation-types.json
apps/desktop/src/modules/assistant/: README.md
apps/desktop/src/modules/assistant/agent-core/: cycleGuard.test.ts  cycleGuard.ts  index.ts  state.ts
apps/desktop/src/modules/assistant/components/: AssistantComposerEditor.test.tsx  AssistantComposerEditor.tsx  AssistantExternalContextItems.tsx  AssistantPanel.tsx  AssistantRunStatus.test.ts  AssistantRunStatus.tsx  ChatMessage.performance.test.tsx  ChatMessage.tsx  EntryMetaProposalCard.test.tsx  EntryMetaProposalCard.tsx  TagProposalList.test.tsx  TagProposalList.tsx  assistantComposerBlocks.test.ts  assistantComposerBlocks.ts  assistantComposerDom.ts  assistantContextTargets.ts  assistantPanelState.ts  assistantPanelViews.tsx  assistantRunController.ts  assistantScope.test.ts  assistantScope.ts  conversationHistory.test.ts  conversationHistory.ts  (+4 more)
apps/desktop/src/modules/reader/: types.ts
apps/desktop/src/modules/sciverse/: types.ts
apps/desktop/src/modules/settings/: workspaceSelection.test.ts  workspaceSelection.ts
apps/desktop/src/shared/components/: JobStatusDock.tsx  MermaidDiagramPreview.tsx  SourceSnapshotPreview.test.tsx  SourceSnapshotPreview.tsx  TitleBar.tsx  ToastProvider.tsx  sourceSnapshotMath.ts
apps/desktop/src/shared/hooks/: useToast.ts  useWorkspace.ts  useWorkspaceJobs.ts  useWorkspaceResourceActions.ts
apps/desktop/src/shared/ipc/: assistantApi.test.ts  assistantApi.ts  workspaceApi.ts
apps/desktop/src/shared/lib/: agentRuntimeSettings.ts  entryDragData.test.ts  entryDragData.ts  featureSkills.ts  parserSettings.ts  readerPreferences.test.ts  readerPreferences.ts  sourceLinkClipboard.ts  themePresets.ts  uiScale.test.ts  uiScale.ts  uiTerminology.ts
apps/desktop/src/shared/types/: agentRuntime.ts  assistant.ts  domain.ts  featureSkill.ts
apps/desktop/src/styles/: base.css  features.css  globals.css  shell.css  theme.css
apps/desktop/vite/: pdfJsAssetsPlugin.ts
crates/neuink-config/: Cargo.toml
crates/neuink-config/src/: lib.rs
crates/neuink-domain/: Cargo.toml
crates/neuink-domain/src/: annotation.rs  entry.rs  error.rs  ids.rs  lib.rs  parser.rs  pdf.rs  segment.rs  segment_note.rs  source_link.rs  tag.rs
crates/neuink-ipc/: Cargo.toml
crates/neuink-ipc/prompts/: ask_segment.md  assistant_router.md  qna_system.md  qna_user.md
crates/neuink-ipc/src/: commands.rs  lib.rs
crates/neuink-ipc/src/commands/: annotation.rs  assistant.rs  conversation.rs  embedding.rs  embedding_resources.rs  entry.rs  job.rs  pdf_reader.rs  sciverse.rs  search.rs  settings.rs  tag.rs  tag_tests.rs  translation.rs  workspace.rs
crates/neuink-ipc/src/commands/assistant/: agent_run_registry.rs  agent_runtime.rs  note_apply.rs  note_apply_content.rs  note_apply_store.rs  note_apply_tests.rs  skill_package.rs
crates/neuink-ipc/src/commands/assistant/agent_runtime/: evidence.rs  llm.rs  types.rs  util.rs
crates/neuink-job/: Cargo.toml
crates/neuink-job/src/: lib.rs
crates/neuink-parser/: Cargo.toml
crates/neuink-parser/src/: cloud_mineru.rs  custom_endpoint.rs  error.rs  lib.rs  mineru_middle.rs  mineru_middle_regression_tests.rs  normalizer.rs
crates/neuink-sciverse/: Cargo.toml
crates/neuink-sciverse/src/: client.rs  error.rs  lib.rs  models.rs
crates/neuink-search/: Cargo.toml
crates/neuink-search/src/: embedding_provider_trait.rs  error.rs  fastembed_provider.rs  lib.rs  memory_index.rs  persistent_semantic_index.rs  query.rs  result.rs  rrf.rs  search_index_trait.rs  semantic_index.rs  token.rs  vector_store_trait.rs
crates/neuink-workspace/: Cargo.toml
crates/neuink-workspace/src/: annotation_index.rs  atomic_write.rs  entry_meta.rs  error.rs  layout.rs  lib.rs  note.rs  search.rs  trash.rs  workspace.rs  workspace_tests.rs
docs/: README.md
docs/architecture/: system-architecture.md
docs/assets/screenshots/: README.md
docs/deployment/: packaging-and-distribution.md
docs/development/: dev-plan.md  engineering-guidelines.md  p0-regression-checklist.md
docs/guides/: mineru-client-import.md
docs/integrations/sciverse/: README.md
docs/integrations/sciverse/source/: agentic-search.html  content.html  meta-catalog.html  meta-paper-relations.html  meta-search.html  overview.html  paper-schema.html  resource.html
docs/product/: 01-prd.md
docs/references/: ref-mineru-output-files.md
(+206 files in other folders)
