[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/neuink-config",
  "crates/neuink-domain",
  "crates/neuink-ipc",
  "crates/neuink-job",
  "crates/neuink-parser",
  "crates/neuink-search",
  "crates/neuink-workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Neuink"]
license = "Apache-2.0"
repository = "https://github.com/SugrSertraline/neuink"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
blake3 = "1"
fastembed = "5"
hmac = "0.12"
nanoid = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
zip = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
