[package]
name = "neuink-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
base64.workspace = true
chrono.workspace = true
neuink-config = { path = "../neuink-config" }
neuink-domain = { path = "../neuink-domain" }
neuink-job = { path = "../neuink-job" }
neuink-parser = { path = "../neuink-parser" }
neuink-search = { path = "../neuink-search" }
neuink-workspace = { path = "../neuink-workspace" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
zip.workspace = true

[features]
default = ["local-embedding"]
local-embedding = ["neuink-search/local-embedding"]
