[package]
name = "neuink-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
neuink-domain = { path = "../neuink-domain" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
zip.workspace = true
