[package]
name = "neuink-sciverse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
