[package]
name = "neuink-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fastembed = { workspace = true, optional = true }
neuink-domain = { path = "../neuink-domain" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
local-embedding = ["dep:fastembed"]
