[package]
name = "neuink-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
neuink-domain = { path = "../neuink-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip.workspace = true
