[package]
name = "neuink-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "neuink_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
neuink-ipc = { path = "../../../crates/neuink-ipc", default-features = false }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-http.workspace = true

[features]
default = ["local-embedding"]
local-embedding = ["neuink-ipc/local-embedding"]
